--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,90 @@
-.App {
-  text-align: center;
+.hover{
+  transition: 0.3s;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+.hover:hover {
+  transform: translateY(-1rem);
+  text-decoration: underline;
+
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+.app {
+  font-family: 'Roboto';font-size: 22px;
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+
+.bg {
+  background-image: url(./../src/img/img.png);
+  background-attachment: fixed;
+  background-repeat: no-repeat;
+  background-position: bottom, right;
+
+}
+
+
+
+.mt {
+  margin-top: 7rem;
+}
+
+
+.iconContainer{
+  position: fixed;
+  right: 1rem;
+  bottom: -3rem;
+  width: 3rem;
+  height: 3rem;
   display: flex;
-  flex-direction: column;
-  align-items: center;
+  border-radius: 50%;
   justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+  align-items: center;
+  background: #dcb14a;
+  transition:0.4s;
+  cursor: pointer;
+  overflow: hidden;
 }
 
-.App-link {
-  color: #61dafb;
+.icon{
+  
+  height: 2.4rem;
+  width: 2.4rem;
+  color: aliceblue;
+  transition: 0.5s;
+  
+}
+.iconContainer:hover .icon{
+  
+  animation: anim 0.5s linear 0s 1 ;
+}
+.active{
+  bottom: 3rem;
+}
+@keyframes anim {
+  0%{
+    transform: translateY(0rem);
+    opacity: 1;
+  }
+  48%{
+    transform: translateY(-3rem);
+    opacity: 1;
+    
+  }
+  49%{
+    transform: translateY(3rem);
+    opacity: 0;
+    color: #dcb14a;
+  }
+  50%{
+    transform: translateY(3rem);
+    opacity: 0;
+    color: white;
+  }
+  100%{
+    transform: translateY(0rem);
+  }
+  
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.header{
+  background-color: transparent;
 }
